@@ -1,7 +1,8 @@
 Changes in 3.2.1 
 
 - Bug fixes:
- - False positive return from IsValidOp (#333)
+  - False positive return from IsValidOp (#333)
+  - Return up to 15 digits of precision from GEOSisValidReason_t (#329)
 
 Changes in 3.2.0 
 
